--- a/client/src/pages/WeeklyTable.css
+++ b/client/src/pages/WeeklyTable.css
@@ -165,7 +165,7 @@ td.visible-on-hover {
 		margin-top: 30px;
 	}
 	.arrow {
-		margin-top: 18vh;
+		margin-top: 7.5vh;
 	}
 }
 
